Source index.html split into templates

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,2 +1,17 @@
 moreDetails:
      other: "More details"
+
+contact:
+     other: "Contact"
+
+getInTouch:
+     other: "Get in touch with an aeolus expert"
+
+giveUsACall:
+     other: "Give Us a Call"
+
+about:
+     other: "about"
+
+our:
+     other: "our"
