--- a/i18n/sr.yaml
+++ b/i18n/sr.yaml
@@ -1,2 +1,17 @@
 moreDetails:
      other: "Сазнај више"
+
+contact:
+     other: "Контакте"
+
+getInTouch:
+     other: "Контактирајте нашег стручњака"
+
+giveUsACall:
+     other: "Позовите нас"
+
+about:
+     other: "о нама"
+
+our:
+     other: "наши"
