Content files & table shortode created

--- a/i18n/sr.yaml
+++ b/i18n/sr.yaml
@@ -2,7 +2,7 @@ moreDetails:
      other: "Сазнај више"
 
 contact:
-     other: "Контакте"
+     other: "Контакти"
 
 getInTouch:
      other: "Контактирајте нашег стручњака"
